--- a/templates/products.tmpl
+++ b/templates/products.tmpl
@@ -1,5 +1,1 @@
-Products - {{.Total}} total:
-
-{{- range .Result}}
-{{.Name}}    {{.Label}}    {{.Category}}    {{join .Tags ", "}}
-{{- end}}
+{{- template "product-list" (dict "Header" "Products" "Total" (len .) "Result" .) }}
